//! Streaming handlers for gRPC operations
//!
//! This module implements streaming response handlers for large result sets
//! and real-time event subscriptions.

use crate::grpc::proto;
use futures::Stream;
use std::pin::Pin;
use tonic::Status;

/// Type alias for streaming query responses
pub type StreamQueryStream =
    Pin<Box<dyn Stream<Item = Result<proto::Node, Status>> + Send + 'static>>;

/// Type alias for streaming events
pub type StreamEventsStream =
    Pin<Box<dyn Stream<Item = Result<proto::Event, Status>> + Send + 'static>>;

/// Type alias for session event subscriptions
pub type SubscribeToSessionStream =
    Pin<Box<dyn Stream<Item = Result<proto::SessionEvent, Status>> + Send + 'static>>;

/// Create a streaming query handler
///
/// This will be implemented to provide efficient streaming of large result sets
pub async fn create_query_stream(
    _query: proto::QueryRequest,
) -> Result<StreamQueryStream, Status> {
    // TODO: Implement streaming query logic
    Err(Status::unimplemented("Streaming queries not yet implemented"))
}

/// Create an event stream
///
/// This will be implemented to provide real-time event notifications
pub async fn create_event_stream(
    _request: proto::StreamEventsRequest,
) -> Result<StreamEventsStream, Status> {
    // TODO: Implement event streaming logic
    Err(Status::unimplemented("Event streaming not yet implemented"))
}

/// Create a session subscription stream
///
/// This will be implemented to provide session-specific event notifications
pub async fn create_session_subscription(
    _request: proto::SubscribeRequest,
) -> Result<SubscribeToSessionStream, Status> {
    // TODO: Implement session subscription logic
    Err(Status::unimplemented(
        "Session subscription not yet implemented",
    ))
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_streaming_stubs() {
        let query_req = proto::QueryRequest::default();
        assert!(create_query_stream(query_req).await.is_err());

        let event_req = proto::StreamEventsRequest::default();
        assert!(create_event_stream(event_req).await.is_err());

        let sub_req = proto::SubscribeRequest::default();
        assert!(create_session_subscription(sub_req).await.is_err());
    }
}
